[gd_scene load_steps=6 format=3 uid="uid://cem0yrawhwf00"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_juo5s"]
[ext_resource type="Texture2D" uid="uid://cscpi8nqjylcm" path="res://images/BloodOverlay.png" id="2_3q5ke"]
[ext_resource type="Texture2D" uid="uid://csi1hvejkrs2f" path="res://images/ui_square.png" id="2_bnrwh"]
[ext_resource type="FontFile" path="res://font/new_dynamicfont.tres" id="3_5lwx4"]
[ext_resource type="Texture2D" uid="uid://dwayfp34tc5ic" path="res://images/crosshair.png" id="4_8x7fj"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_juo5s")

[node name="BloodOverlay" type="TextureRect" parent="."]
modulate = Color(0.360784, 0.360784, 0.360784, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_3q5ke")

[node name="HealthBar" type="TextureProgressBar" parent="."]
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -50.0
offset_right = 219.999
offset_bottom = -18.0
value = 50.0
nine_patch_stretch = true
texture_under = ExtResource("2_bnrwh")
texture_progress = ExtResource("2_bnrwh")
tint_under = Color(0.211765, 0.211765, 0.211765, 1)
tint_progress = Color(1, 0, 0, 1)

[node name="StaminaBar" type="TextureProgressBar" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -100.0
offset_right = 219.999
offset_bottom = -68.0
grow_vertical = 0
value = 50.0
nine_patch_stretch = true
texture_under = ExtResource("2_bnrwh")
texture_progress = ExtResource("2_bnrwh")
tint_under = Color(0.211765, 0.211765, 0.211765, 1)

[node name="AmmoText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -150.0
offset_right = 188.0
offset_bottom = -109.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_5lwx4")
text = "Ammo: 50"

[node name="Crosshair" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -95.0
offset_right = 259.0
offset_bottom = 257.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.52, 0.52)
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_8x7fj")

[node name="Prompt" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.5
offset_top = -26.0
offset_right = 33.5
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_5lwx4")
theme_override_font_sizes/font_size = 80
horizontal_alignment = 1

[node name="DebugInfo" type="Node" parent="."]

[node name="MovementState" type="Label" parent="DebugInfo"]
offset_left = 1034.0
offset_top = 3.0
offset_right = 1275.0
offset_bottom = 67.0

[node name="DamageIndicator" type="Line2D" parent="."]
position = Vector2(960, 418)
points = PackedVector2Array(-50, 0, 0, -31, 50, 0)
default_color = Color(1, 0, 0, 1)

[node name="IndicatorTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="IndicatorTimer" to="." method="_on_indicator_timer_timeout"]
